--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ img {
 .home-content h2 {
     font-size:6rem;
     position: relative;
-    top: -400px;
+    top: -468px;
     left: 600px;
     font-family: serif;
     width:  300px;
@@ -121,7 +121,7 @@ img {
 }
 .home-content p {
     font-size: 4rem;
-    margin: 170px 0 43px;
+    margin: 86px 0 43px;
     padding: 10px;
     font-family: serif; 
     position: relative;
@@ -213,103 +213,34 @@ img {
     margin: 30px 400px;
 }
 
+
+
+
 /* Footer
 ------------------------------- */
 footer{
-    background: rgb(0, 2, 109);
-    position: fixed;
-    bottom: 0;
-    padding: 30px 0;
-    width: 100%;
-    height: 130px;
-    text-align: center;
     display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background: rgb(0, 2, 109);
+    padding: 0;
+    height: 200px;
+}
+.footer-item {
+    display: inline-flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    left : 0;
-
 }
-footer h1{
-    width:  70px;       /* ※縦横を同値に */
-    height: 70px; 
+.footer-item__img {
+    display: block;
+    height: 70px;
+    width: 70px;
+    border-radius: 50%;
 }
-footer .contact{
-    border-radius: 50%;  /* 角丸半径を50%にする(=円形にする) */
-    width:  70px;       /* ※縦横を同値に */
-    height: 70px;       /* ※縦横を同値に */
-    position: relative;
-    top: 130px;
-    right: 300px;
-}
-footer .youtube{
-    border-radius: 50%;  /* 角丸半径を50%にする(=円形にする) */
-    width:  70px;       /* ※縦横を同値に */
-    height: 70px;       /* ※縦横を同値に */
-    position: relative;
-    top: 60px;
-    right: 150px;
-}
-footer .insta{
-    border-radius: 50%;  /* 角丸半径を50%にする(=円形にする) */
-    width:  70px;       /* ※縦横を同値に */
-    height: 70px;       /* ※縦横を同値に */
-    position: relative;
-    top: -10px;
-    right: 0px;
-}
-footer .company{
-    border-radius: 50%;  /* 角丸半径を50%にする(=円形にする) */
-    width:  70px;       /* ※縦横を同値に */
-    height: 70px;       /* ※縦横を同値に */
-    position: relative;
-    top: -80px;
-    right: -150px;
-}
-footer .school{
-    border-radius: 50%;  /* 角丸半径を50%にする(=円形にする) */
-    width:  70px;       /* ※縦横を同値に */
-    height: 70px;       /* ※縦横を同値に */
-    position: relative;
-    top: -150px;
-    right: -300px;
-}
-footer .contact_2{
+.footer-item__title {
+    margin-top: 8px;
     color: #fff;
-    position: relative;
-    width:  70px;
-    height: 0px;
-    top: 130px;
-    right: 300px;
-}
-footer .youtube_2{
-    color: #fff;
-    position: relative;
-    width:  70px;
-    height: 0px;
-    top: 60px;
-    right: 150px;
-}
-footer .insta_2{
-    color: #fff;
-    position: relative;
-    width:  70px;
-    height: 0px;
-    top: -10px;
-    right: 0px;
-}
-footer .company_2{
-    color: #fff;
-    position: relative;
-    width:  100px;
-    height: 0px;
-    top: -80px;
-    right: -140px;
-}
-footer .school_2{
-    color: #fff;
-    position: relative;
-    width:  80px;
-    height: 0px;
-    top: -150px;
-    right: -300px;
+    display: block;
+    text-align: center;
 }
