--- a/css/style.css
+++ b/css/style.css
@@ -210,12 +210,113 @@ img {
     left: 550px;
 }
 .prof_home table{
-    margin: 30px 400px;
+    margin: 50px 400px 200px;
+
 }
 
+/* Footer
+------------------------------- */
+footer{
+    background: rgb(0, 2, 109);
+    position: fixed;
+    bottom: 0;
+    padding: 30px 0;
+    width: 100%;
+    height: 130px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    left : 0;
 
-
-
+}
+footer h1{
+    width:  70px;       /* ※縦横を同値に */
+    height: 70px; 
+}
+footer .contact{
+    border-radius: 50%;  /* 角丸半径を50%にする(=円形にする) */
+    width:  70px;       /* ※縦横を同値に */
+    height: 70px;       /* ※縦横を同値に */
+    position: relative;
+    top: 130px;
+    right: 300px;
+}
+footer .youtube{
+    border-radius: 50%;  /* 角丸半径を50%にする(=円形にする) */
+    width:  70px;       /* ※縦横を同値に */
+    height: 70px;       /* ※縦横を同値に */
+    position: relative;
+    top: 60px;
+    right: 150px;
+}
+footer .insta{
+    border-radius: 50%;  /* 角丸半径を50%にする(=円形にする) */
+    width:  70px;       /* ※縦横を同値に */
+    height: 70px;       /* ※縦横を同値に */
+    position: relative;
+    top: -10px;
+    right: 0px;
+}
+footer .company{
+    border-radius: 50%;  /* 角丸半径を50%にする(=円形にする) */
+    width:  70px;       /* ※縦横を同値に */
+    height: 70px;       /* ※縦横を同値に */
+    position: relative;
+    top: -80px;
+    right: -150px;
+}
+footer .school{
+    border-radius: 50%;  /* 角丸半径を50%にする(=円形にする) */
+    width:  70px;       /* ※縦横を同値に */
+    height: 70px;       /* ※縦横を同値に */
+    position: relative;
+    top: -150px;
+    right: -300px;
+}
+footer .contact_2{
+    color: #fff;
+    position: relative;
+    width:  70px;
+    height: 0px;
+    top: 130px;
+    right: 300px;
+}
+footer .youtube_2{
+    color: #fff;
+    position: relative;
+    width:  70px;
+    height: 0px;
+    top: 60px;
+    right: 150px;
+}
+footer .insta_2{
+    color: #fff;
+    position: relative;
+    width:  70px;
+    height: 0px;
+    top: -10px;
+    right: 0px;
+}
+footer .company_2{
+    color: #fff;
+    position: relative;
+    width:  100px;
+    height: 0px;
+    top: -80px;
+    right: -140px;
+}
+footer .school_2{
+    color: #fff;
+    position: relative;
+    width:  80px;
+    height: 0px;
+    top: -150px;
+    right: -300px;
+    padding: 0;
+    margin-bottom: 0;
+    bottom: 0;
+}
 /* Footer
 ------------------------------- */
 footer{
