--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,9 @@ img {
 ---------------------------------------------------------------------------------------------------- */
 /* Body_Home
 ------------------------------- */
+.info {
+    margin-bottom: 300px;
+}
 .home-content {
     position: absolute;
     top: 190px;
